# rstatusbar

./: Cargo.toml  LICENSE  Makefile  README.md  config.toml
examples/: config.toml
src/: main.rs  statusbar.rs
src/component/: cpu.rs  mod.rs  section.rs
src/configuration/: converter.rs  device.rs  mod.rs  values.rs
src/configuration/components/: battery.rs  cpu.rs  date.rs  disk.rs  general.rs  memory.rs  mod.rs  network.rs  script.rs  temperature.rs  volume.rs  weather.rs
